upgrade next to v8.14.0
Signed-off-by: Alex.D.Scofield <lizhiqin46783937@live.com>

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,26 +1,12 @@
 //Override next/source/css/_schemes/Mist/_header.styl Start
-header.header {
-  background: #1C1C1C
-}
-
-.header-inner {
-  background: #1C1C1C;
-  align-items: center;
-  display: flex;
-  padding: 20px 0;
-
-  +mobile() {
-    display: block;
-    padding: 10px 0;
-  }
+.column {
+  background: #222
 }
 
 .site-meta {
   line-height: normal;
 
   .brand {
-    padding: 2px 1px;
-
     +mobile() {
       display: block;
     }
@@ -58,7 +44,7 @@ header.header {
 
 .site-subtitle {
   display: block;
-  color: #FFFFFF;
+  color: #999;
 }
 //Override next/source/css/_schemes/Mist/_header.styl End
 
